<resources>
    <string name="app_name">시크릿메모리</string>


    <!--<string name="phone_auth">휴대폰 인증</string>-->
    <!--<string name="phone_auth_info">휴대폰 번호를 입력해주세요</string>-->
    <!--<string name="phone_auth_hint">휴대폰 번호 입력</string>-->
    <!--<string name="phone_auth_bottom_info">* 실제 사용하는 휴대폰 번호를 입력해주세요\n* 프레잇 회원들의 기도의 탑은 해당 전화번호로 쌓여집니다</string>-->
    <!--<string name="request">인증 번호 요청</string>-->
    <!--<string name="phone_auth_bottom">인증 번호 입력</string>-->
    <!--<string name="phone_request_msg">해당 휴대폰 번호로 SMS 문자 메세지가 발송되었습니다</string>-->

    <string name="phone_auth_confirm_hint">인증번호 입력</string>

    <string name="intro_is_already_singup">이미 회원이신가요?</string>
    <string name="login_u"><u>로그인</u></string>
    <string name="login">로그인</string>
    <string name="join_email">이메일로 회원가입</string>
    <string name="facebook_login">페이스북 로그인</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="save">저장</string>

    <string name="join_n">회원가입</string>

    <string name="function_no_active">곧 지원될 예정입니다</string>

    <string name="invalid_length">비밀번호는 6자리 이상으로 설정해주세요.</string>
    <string name="invalid_pattern">비밀번호는 영문 소문자와 숫자로 이뤄져야 합니다.</string>
    <string name="invalid_password">비밀번호가 일치하지 않습니다.</string>


    <string name="no_name">(알 수 없음)</string>

    <string name="hello">반갑습니다!</string>

    <string name="join_pastor_title">담임목사명</string>
    <string name="join_pastor_info">담임목사님 성함을 입력해주세요</string>
    <string name="join_pastor_hint">담임목사님 성함 입력</string>
    <string name="join_pastor_bottom_info">* 이 서비스는 익명입니다\n* 가정교회가 아니면 모든 기능을 이용할 수 없습니다\n* 교회의 담임목사님 성함을 입력해주세요</string>

    <string name="join_name_title">이름</string>
    <string name="join_name_info">당신의 성함을 입력해주세요</string>
    <string name="join_name_hint">이름 입력</string>
    <string name="join_name_bottom_info">* 이 서비스는 익명입니다\n* 평신도 세미나 참석하신 분이 아니시면 모든 기능을 이용할 수 없습니다\n* 최근에 참석하신 분이라면 전산에 등록될때까지 며칠 기다려주세요</string>

    <string name="join_profile_title">프로필</string>
    <string name="join_profile_hint">사용하실 닉네임 입력</string>
    <string name="join_profile_bottom_info">* 이 서비스는 익명입니다\n* 지금 등록하시는 사진과 닉네임이 노출됩니다</string>


    <string name="join_email_title">이메일</string>
    <string name="join_email_info">이메일 주소를 입력해주세요.</string>
    <string name="join_email_hint">이메일 입력</string>
    <string name="join_email_bottom_info">* 실제 사용하는 이메일을 입력해주세요\n* 입력하신 이메일 주소로 인증 링크가 발송될 수 있습니다\n* 로그인, 비밀번호 찾기 등의 회원 관련 기능에 사용됩니다</string>

    <string name="join_password_title">비밀번호 입력</string>
    <string name="join_password_info">사용하실 비밀번호를 입력해주세요</string>
    <string name="join_password_hint">비밀번호</string>
    <string name="join_password_hint_re">비밀번호 재입력</string>
    <string name="join_password_bottom_info">* 영문과 숫자를 조합해서 6자리 이상을 입력해주세요</string>

    <string name="find_password"><u>비밀번호 찾기</u></string>

    <string name="secret_memory_title">주님과 목자들의 비밀공간\nSecret Memory</string>

    <string name="is_join">처음 오셨나요?</string>
    <string name="join"><u>가입하기</u></string>

    <string name="error_sign_in_wrong_pw">아이디나 비밀번호가 올바르지 않습니다.\n다시 한 번 시도해 주세요.</string>
    <string name="error_sign_in_transmit">데이터 전송에 실패하였습니다.\n다시 한 번 시도해 주세요.</string>
    <string name="error_sign_in_blank_id">이메일을 입력해주세요.</string>
    <string name="error_sign_in_blank_pw">비밀번호를 입력해주세요.</string>

    <string name="menu1">시크릿 메모리</string>
    <string name="menu2">My 시크릿</string>
    <string name="menu3">설정</string>
    <string name="menu4">의견 보내기</string>

    <string name="send">보내기</string>

    <string name="share">공유하기</string>

    <string name="menu1_hint">이름없는 목자들의 고백보기</string>
    <string name="menu2_hint">주님과 나만 알고있는 비밀이야기</string>
    <string name="menu3_hint">알림, 계정 및 기타 설정</string>
    <string name="menu4_hint">여러분의 의견이 듣고 싶습니다</string>


    <string name="tag_show">해당 태그는 모든 사람이 볼 수 있도록 설정되었습니다</string>
    <string name="tag_hidden">해당 태그는 본인만 볼 수 있도록 설정되었습니다</string>
    <string name="tag_target">해당 태그는 본인과 당사자만 볼 수 있도록 설정되었습니다</string>

    <string name="write_hint">주님께 모든것을 이야기하세요</string>
    <string name="error_write_text_null">공백으로는 작성할 수 없습니다.</string>
    <string name="error_sign_null">오류가 발생했습니다. 다시 로그인 해주세요.</string>

    <string name="permission_storage">사진을 이용하기 위해서는 권한이 필요합니다.</string>
    <string name="error_permission_deny">권한을 허용하지 않을 경우 이미지를 불러올 수 없습니다.\n권한을 허용해주세요.</string>
    <string name="error_img_upload_fail">이미지 업로드에 실패했습니다.</string>

    <string name="cancel">취소</string>
    <string name="name_select">정보를 선택해주세요</string>
    <string name="name_no_exist">아니요. 정보가 없습니다</string>

    <string-array name="bg_text">
        <item>주님,\n목장 모임을 할 공간이 좁아\n침대를 버렸습니다</item>
        <item>Vip가 좋아하는 음식하려다가\n엄마하고 싸웠습니다</item>
        <item>아무도 오지 않는 이 시간,\n시계를 바라보고 기다립니다\n\n주님도 이렇게 나를 기다렸나요..</item>
        <item>내가 생일 선물로 받고 싶었던것\n목원 생일에 줬습니다\n\n내 마음은 너무나도.. 기쁩니다</item>
        <item>내 하나님이여\n내가 이 백성을 위하여 행한 모든 일을\n기억하여 주십시오\n\n- 느 5:19 -</item>
    </string-array>

    <string name="comment_edittext">댓글을 입력해주세요.</string>
    <string name="comment_btn_upload">작성</string>
    <string name="comment_btn_loading">전송중</string>
    <string name="comment_btn_done">완료</string>
    <string name="comment_btn_error">실패</string>

    <string name="back_finish">뒤로 버튼을 한번더 누르면 앱이 종료됩니다</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="error_eng_duplicate">The email address is already in use by another account.</string>
    <string name="error_kor_duplicate">다른 사용자가 사용하고 있는 이메일 주소입니다.</string>
    <string name="error_eng_bad_format">The email address is badly formatted.</string>
    <string name="error_kor_bad_format">이메일 형식이 잘못되었습니다.</string>
    <string name="error_eng_wrong_password">The password is invalid or the user does not have a password.</string>
    <string name="error_kor_wrong_password">비밀번호가 잘못되었습니다.\n다시 한번 입력해주세요.</string>
</resources>
