<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/bg_join"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/shadow_top"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="25sp"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="1.0"
        android:shadowDy="1.0"
        android:shadowRadius="1.0"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/join_password_title"
        />

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/title">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:alpha="0.8"
            android:layout_marginLeft="1dp"
            android:background="@color/green_on"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:alpha="0.8"
            android:layout_marginLeft="1dp"
            android:background="@color/green_on"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:alpha="0.8"
            android:layout_marginLeft="1dp"
            android:background="@color/green_on"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:alpha="0.8"
            android:layout_marginLeft="1dp"
            android:background="@color/green_on"/>

    </LinearLayout>

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="1.0"
        android:shadowDy="1.0"
        android:shadowRadius="1.0"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_below="@+id/top_layout"
        android:text="@string/join_password_info"
        />

    <com.myspringway.secretmemory.library.ClearableEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:inputType="textPassword"
        android:hint="@string/join_password_hint"
        android:textColorHint="@color/white_20"
        android:textColor="@color/white"
        android:background="@color/white_20"
        android:layout_below="@id/info"/>

    <com.myspringway.secretmemory.library.ClearableEditText
        android:id="@+id/password_re"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:inputType="textPassword"
        android:hint="@string/join_password_hint"
        android:textColorHint="@color/white_20"
        android:textColor="@color/white"
        android:background="@color/white_20"
        android:layout_below="@id/password"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white_80"
        android:layout_below="@+id/password_re"
        android:text="@string/join_password_bottom_info"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/prev"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/prev"
            android:background="@color/white_20"/>

        <TextView
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/next"
            android:background="@color/black_20"/>

    </LinearLayout>

</RelativeLayout>
